@@ -572,7 +572,7 @@ class CConfigurationImport {
 			foreach ($items as $item) {
 				$item['hostid'] = $hostid;
 
-				if (!empty($item['applications'])) {
+				if (isset($item['applications']) && $item['applications']) {
 					$applicationsIds = array();
 					foreach ($item['applications'] as $application) {
 						if ($applicationId = $this->referencer->resolveApplication($hostid, $application['name'])) {
@@ -586,11 +586,11 @@ class CConfigurationImport {
 					$item['applications'] = $applicationsIds;
 				}
 
-				if (isset($item['interface_ref'])) {
+				if (isset($item['interface_ref']) && $item['interface_ref']) {
 					$item['interfaceid'] = $this->referencer->interfacesCache[$hostid][$item['interface_ref']];
 				}
 
-				if ($item['valuemap']) {
+				if (isset($item['valuemap']) && $item['valuemap']) {
 					$valueMapId = $this->referencer->resolveValueMap($item['valuemap']['name']);
 					if (!$valueMapId) {
 						throw new Exception(_s(
@@ -604,6 +604,7 @@ class CConfigurationImport {
 				}
 
 				$itemsId = $this->referencer->resolveItem($hostid, $item['key_']);
+
 				if ($itemsId) {
 					$item['itemid'] = $itemsId;
 					$itemsToUpdate[] = $item;
