@@ -54,7 +54,7 @@ function DBconnect(&$error) {
 			case ZBX_DB_MYSQL:
 				$DB['DB'] = @mysqli_connect($DB['SERVER'], $DB['USER'], $DB['PASSWORD'], $DB['DATABASE'], $DB['PORT']);
 				if (!$DB['DB']) {
-					$error = 'Error connecting to database ['.trim(mysqli_connect_error()).']';
+					$error = 'Error connecting to database: '.trim(mysqli_connect_error());
 					$result = false;
 				}
 				else {
@@ -75,7 +75,7 @@ function DBconnect(&$error) {
 
 				$DB['DB']= @pg_connect($pg_connection_string);
 				if (!$DB['DB']) {
-					$error = 'Error connecting to database';
+					$error = 'Error connecting to database.';
 					$result = false;
 				}
 				elseif (false !== ($pgsql_version = pg_parameter_status('server_version'))) {
@@ -107,7 +107,8 @@ function DBconnect(&$error) {
 					DBexecute('ALTER SESSION SET NLS_NUMERIC_CHARACTERS='.zbx_dbstr('. '));
 				}
 				else {
-					$error = 'Error connecting to database';
+					$ociError = oci_error();
+					$error = 'Error connecting to database: '.$ociError['message'];
 					$result = false;
 				}
 
@@ -126,7 +127,7 @@ function DBconnect(&$error) {
 
 				$DB['DB'] = @db2_connect($connect, $DB['USER'], $DB['PASSWORD']);
 				if (!$DB['DB']) {
-					$error = 'Error connecting to database';
+					$error = 'Error connecting to database: '.db2_conn_errormsg();
 					$result = false;
 				}
 				else {
@@ -151,7 +152,7 @@ function DBconnect(&$error) {
 						$DB['DB'] = @new SQLite3($DB['DATABASE'], SQLITE3_OPEN_READWRITE);
 					}
 					catch (Exception $e) {
-						$error = 'Error connecting to database';
+						$error = 'Error connecting to database.';
 						$result = false;
 					}
 					unlock_sqlite3_access();
