@@ -2612,16 +2612,25 @@ function encode_log($data) {
 			: $data;
 }
 
-function no_errors() {
+/**
+ * Check if we have error messages to display.
+ *
+ * @global array $ZBX_MESSAGES
+ *
+ * @return bool
+ */
+function hasErrorMesssages() {
 	global $ZBX_MESSAGES;
 
-	foreach ($ZBX_MESSAGES as $message) {
-		if ($message['type'] == 'error') {
-			return false;
+	if ($ZBX_MESSAGES !== null) {
+		foreach ($ZBX_MESSAGES as $message) {
+			if ($message['type'] === 'error') {
+				return true;
+			}
 		}
 	}
 
-	return true;
+	return false;
 }
 
 /**
