@@ -98,11 +98,11 @@ if ($exportData) {
 	$export->setWriter(CExportWriterFactory::getWriter(CExportWriterFactory::XML));
 	$exportData = $export->export();
 
-	if (no_errors()) {
-		print($exportData);
+	if (hasErrorMesssages()) {
+		show_messages();
 	}
 	else {
-		show_messages();
+		print($exportData);
 	}
 	exit();
 }
